--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,8 +26,8 @@ requirements:
     - pandas >=1.0,<2.0
     - openpyxl >=3.0,<4.0
     - defusedxml >=0.6.0,<1.0
-    - click >=7.0,<8.0
-    - rich >=9.0,<10.0
+    - click >=7.0,<9.0
+    - rich >=9.0,<13.0
 
 test:
   imports:
@@ -39,10 +39,12 @@ test:
 
 about:
   home: https://gitlab.com/ags-data-format-wg/ags-python-library
-  license: GPL-3.0-or-later
+  license: LGPL-3.0-or-later
   license_family: GPL
-  license_file: LICENSE
-  summary: A library to read and write AGS4 files using Pandas DataFrames
+  license_file: 
+    - LICENSE
+    - COPYING.LESSER
+  summary: A library to read, write, and check AGS4 files using Pandas DataFrames
 
 extra:
   recipe-maintainers:
