--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -11,7 +11,7 @@ source:
 
 build:
   noarch: python
-  number: 0
+  number: 1
   script: {{ PYTHON }} -m pip install . -vv
   entry_points:
     - ags4_cli = python_ags4.ags4_cli:main
@@ -40,7 +40,7 @@ test:
 about:
   home: https://gitlab.com/ags-data-format-wg/ags-python-library
   license: LGPL-3.0-or-later
-  license_family: GPL
+  license_family: LGPL
   license_file: 
     - LICENSE
   summary: A library to read, write, and check AGS4 files using Pandas DataFrames
